--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   width: 100%;
+  height: 90vh;
 }
 
 img {
@@ -10,10 +11,11 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   font-family: 'Roboto', sans-serif;
   margin: 0 auto;
   width: 1024;
+  height: 100%;
 }
 
 .certificado {
