--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
-  width: 100%;
+  width: 90%;
   height: 90vh;
+  margin: 0 auto;
 }
 
 img {
@@ -20,11 +21,13 @@ iframe {
   font-family: 'Roboto', sans-serif;
   margin: 0 auto;
   width: 1024;
+  max-width: 100%;
   height: 100%;
 }
 
 .certificado {
   width: 400px;
+  max-width: 90%;
 }
 
 .fb-share-button {
